--- a/rushb-stats-site/package.json
+++ b/rushb-stats-site/package.json
@@ -17,6 +17,7 @@
     "@skeletonlabs/skeleton": "2.6.0",
     "@skeletonlabs/tw-plugin": "0.3.0",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.27.4",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
