fixed typo in dockerfile

--- a/rushb-stats-site/Dockerfile
+++ b/rushb-stats-site/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:lts-alpine3.18 
 
 WORKDIR /app
-COPY rushb-stats-site/package.json rusb-stats.site/yarn.lock ./
+COPY rushb-stats-site/package.json rusb-stats-site/yarn.lock ./
 RUN yarn install
 
 COPY ./rushb-stats-site/. .
