changed package-lock.json to correct path

--- a/rushb-stats-site/Dockerfile
+++ b/rushb-stats-site/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:lts-alpine3.18 
 
 WORKDIR /app
-COPY rushb-stats-site/package.json rusb-stats-site/yarn.lock ./
-RUN yarn install
+COPY rushb-stats-site/package.json rusb-stats-site/package-lock.json ./
+RUN npm install
 
 COPY ./rushb-stats-site/. .
 
-RUN yarn build
+RUN npm run-script build
 RUN rm -rf src/ static/ emailTemplates/
 USER node:node
 
