--- a/rushb-stats-site/package.json
+++ b/rushb-stats-site/package.json
@@ -41,6 +41,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@auth/core": "^0.18.6",
     "@auth/sveltekit": "^0.4.0",
     "@floating-ui/dom": "1.5.3",
     "@laihoe/demoparser2": "^0.16.1",
