changed path for copy of src to be relative to top level 3.0

--- a/demo-fetcher/Dockerfile
+++ b/demo-fetcher/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /usr/var/app
 COPY demo-fetcher/requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY ./demo-fetcher/. .
+COPY demo-fetcher/. .
 
 CMD [ "python3", "demo-fetch-server.py"]
