--- a/demo-fetcher/Dockerfile
+++ b/demo-fetcher/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.8-slim-buster
 
-WORKDIR /usr/var/app
+WORKDIR /app
 
 COPY demo-fetcher/requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-COPY demo-fetcher/demo-fetch-server.py .
+COPY ./demo-fetcher/. .
 
 CMD [ "python3", "demo-fetch-server.py"]
