--- a/demo-fetcher/Dockerfile
+++ b/demo-fetcher/Dockerfile
@@ -7,4 +7,4 @@ RUN pip3 install -r requirements.txt
 
 COPY ./demo-fetcher/. .
 
-CMD [ "python3", "demo-fetch-server.py"]
+CMD [ "python3", "/app/demo-fetch-server.py"]
