--- a/demo-fetcher/requirements.txt
+++ b/demo-fetcher/requirements.txt
@@ -15,6 +15,7 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+pika==1.3.2
 protobuf==3.20.0
 pycparser==2.21
 pycryptodomex==3.19.0
